index con deteccion de ip

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
 			var divid = 1;
 		    //var wsUri = "ws://echo.websocket.org/";             //test WenSocket.
-		    //var wsUri = "ws://"+ip+"/xbee";
-		    var wsUri = '"ws://'+ip+'/xbee"';
+		    var wsUri = 'ws://'+ip+'/xbee';
+		    alert(wsUri);
 		    var output; 
 		    var sensors = 0;
  			
