index sin alertas

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
 		</DIV>		
 		<SCRIPT TYPE="text/javascript">
 		 var ip = location.host;
-		 alert(ip);
+		 //alert(ip);
 
 			var divid = 1;
 		    //var wsUri = "ws://echo.websocket.org/";             //test WenSocket.
 		    var wsUri = 'ws://'+ip+'/xbee';
-		    alert(wsUri);
+		    //alert(wsUri);
 		    var output; 
 		    var sensors = 0;
  			
