--- a/website/index.html
+++ b/website/index.html
@@ -3,80 +3,33 @@
 <HTML>	
 	<HEAD>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+		<link rel="stylesheet" href="style.css" type="text/css" media="all"> 
 	</HEAD>
 	<BODY onload="Conect()">
-		<STYLE>
-			body {background: blue;
-			}
-			div#Logo{text-align:center;
-					background:;
-					width: 370px;
-					height: 180px;
-					background-image:url(logo_ENIB.jpg);
-					background-repeat:no-repeat;
-					overflow:hidden;
-					-webkit-border-radius: 50px;
-					-moz-border-radius: 50px;
-					border-radius: 50px;
-			}
-			div#Title{text-align:center;}
-			div#Sensors {
-				background-color: white;
-				border: 1px solid #000;
-				padding: 10px;
-				margin: 30px auto;
-				width: 1000px;
-				 height: 1100px;
-			}
-			div#ATcommands{	
-   				float:left;
- 				background-color: #E8E8E8;
-			    margin: 30px 10px 30px 30px;
-			    padding: 10px;
-				width: 100px;
-			}
-			div#Interruption {
-				float:left;
-				background-color: RED;
-				padding: 5px;
-				margin: 30px 30px 0px 30px;
-				width: 800px;
-			}
-			div#conect {
-				text-align:center;
-			}
-			div {
-				border: 1px solid #000;
-				padding: 5px;
-				margin: 5px;
-			}
-		</STYLE>
-		<DIV ID="Logo">
-			
-		</DIV>
+		<DIV ID="Logo"></DIV>
 		<DIV ID="Title">
 				<h1>PROYECTO DE ELECTRÓNICA</h1>
 		</DIV>
-		<DIV ID="Sensors">
+		<DIV ID="Global">
 			<h3 >Sensores</h3>
 			<DIV ID="Interruption">
 				<h3>Estado:</h3>
 				<button onclick="Conect(1)">Conectar</button>
 				<DIV ID="conect"></DIV>
 			</DIV>
-			<DIV ID="ATcommands">			
+			<DIV ID="Sensores">			
 					<button onclick="sendmessage(1)">Interruptor 1</button>
 					<div id="box"><span id="div10"></span>&nbsp;</div>	
 			</DIV>
-			<DIV ID="ATcommands">				
+			<DIV ID="Sensores">				
 					<button onclick="sendmessage(2)">Interruptor 2</button>
 					<div id="box"><span id="div20"></span>&nbsp;</div>	
 			</DIV>
-			<DIV ID="ATcommands">			
+			<DIV ID="Sensores">			
 					<button onclick="sendmessage(3)">Interruptor 3</button>
 					<div id="box"><span id="div30"></span>&nbsp;</div>	
 			</DIV>
-			<DIV ID="ATcommands">			
+			<DIV ID="Sensores">			
 					<button onclick="sendmessage(4)">Interruptor 4</button>
 					<div id="box"><span id="div40"></span>&nbsp;</div>	
 			</DIV>
