Acento en la página web

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
 	<BODY onload="Conect()">
 		<DIV ID="Logo"></DIV>
 		<DIV ID="Title">
-				<h1>PROYECTO DE ELECTRÓNICA</h1>
+				<h1>PROYECTO DE ELECTR&Oacute;NICA</h1>
 		</DIV>
 		<DIV ID="Global">
 			<h3 >Sensores</h3>
