Modificaciôn del alto

--- a/website/index.html
+++ b/website/index.html
@@ -20,6 +20,7 @@
 				<button onclick="Conect(1)">Conectar</button>
 				<DIV ID="conect"></DIV>
 			</DIV>
+		<DIV ID="Sensoresbox">
 			<DIV class="Sensores">			
 					<button onclick="sendmessage(1)">Interruptor 1</button>
 					<div class="box"><span id="div10"></span>&nbsp;</div>	
@@ -36,6 +37,7 @@
 					<button onclick="sendmessage(4)">Interruptor 4</button>
 					<div class="box"><span id="div40"></span>&nbsp;</div>	
 			</DIV>
+		</DV>
 		</DIV>		
 		<SCRIPT TYPE="text/javascript">
 		 
