Algunas modificaciones en el estilo de la página, no terminado todavía

--- a/website/index.html
+++ b/website/index.html
@@ -13,10 +13,14 @@
 		<script type="text/javascript" src="scripts.js"></script>
 	</HEAD>
 	<BODY>
-		<DIV ID="Logo"></DIV>
-		<DIV ID="Title">
+		<div id="header">
+			<DIV ID="Logo"></DIV>
+			<DIV ID="Title">
 				<h1>PROYECTO DE ELECTR&Oacute;NICA</h1>
-		</DIV>
+				<p>Accionamientos remotos por Zigbee</p>
+			</DIV>
+		</div>
+		
 		<DIV ID="Global">
 			<h3 >Sensores</h3>
 			<DIV ID="Interruption">
