Index sin bordes y con titulos en Blanco

--- a/website/index.html
+++ b/website/index.html
@@ -22,9 +22,9 @@
 		</div>
 		
 		<DIV ID="Global">
-			<h3 >Sensores</h3>
+			<h3 ><span style="color: white;">Interruptores</span></h3>
 			<DIV ID="Interruption">
-				<h3>Estado:</h3>
+				<h3><span style="color: white;">Estado:</span></h3>
 				<button onclick="Conect(1)">Conectar</button>
 				<DIV ID="conect">
 			</DIV>
