Pequeños bugfixes en ag web

--- a/website/index.html
+++ b/website/index.html
@@ -25,7 +25,7 @@
 			<h3 ><span style="color: white;">Interruptores</span></h3>
 			<DIV ID="Interruption">
 				<h3><span style="color: white;">Estado:</span></h3>
-				<button onclick="Conect(1)">Conectar</button>
+				<button onclick="Connect()">Conectar</button>
 				<DIV ID="conect">
 			</DIV>
 
